--- a/index.html
+++ b/index.html
@@ -149,7 +149,18 @@
               </p>
             </td>
           </tr>
-    
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Talks</heading>
+        <ul>
+            <li> In July 2021 I gave a remote talk at the journal club of Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
+        </ul>
+              <p>
+              </p>
+            </td>
+          </tr>
+        </tbody>
 
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -161,7 +172,10 @@
               </p>
             </td>
           </tr>
-        </tbody></table>
+        </tbody>
+        </table>
+      
+      </table>
       </td>
     </tr>
   </table>
