--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <name>Róbert Csordás</name>
               </p>
               <p>
-                I am a PhD candidate at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, with <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>, where I work on systematic generalization, mainly in context of algorithmic and reasoning.
-                This drives my interest in network architectures (Transformers, DNC, graph networks) and inductive biases like information routing (attention, memory) and learning modular structures.
-                My goal is to create a system that can learn generally applicable rules instead of pure pattern matching but with minimal hardcoded structure. I consider the lack of systematic generation the main obstacle to a more generally applicable artificial intelligence.
+                I am a PhD candidate at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>, where I work on systematic generalization, mainly in context of algorithmic reasoning.
+                This drives my research interest in network architectures (Transformers, DNC, graph networks) with inductive biases like information routing (attention, memory) and learning modular structures.
+                My goal is to create a system that can learn generally applicable rules instead of pure pattern matching but with minimal hardcoded structure. I consider the lack of systematic generation to be the main obstacle to a more generally applicable artificial intelligence.
             </p>
               <p>
                 Prior to starting my PhD I received a master's degree from <a href="https://www.bme.hu/">Budapest University of Technology and Economics</a>, and worked as a research scientist at <a href="https://aimotive.com/">AImotive</a> on developing self driving cars.
@@ -154,7 +154,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Talks</heading>
         <ul>
-            <li> In July 2021 I gave a remote talk at the journal club of Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
+            <li> In July 2021 I gave a remote talk at the Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
         </ul>
               <p>
               </p>
