--- a/index.html
+++ b/index.html
@@ -149,18 +149,62 @@
               </p>
             </td>
           </tr>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Talks</heading>
-        <ul>
-            <li> In July 2021 I gave a remote talk at the Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
-        </ul>
+              <heading>Patents</heading>
               <p>
               </p>
             </td>
           </tr>
         </tbody>
+        </table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src='images/patent.png' width="160">
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://pimg-fpiw.uspto.gov/fdd/53/807/103/0.pdf">
+              <papertitle>Method and apparatus for generating a displacement map of an input dataset pair</papertitle>
+            </a>
+            <br>
+            <strong>Róbert Csordás</strong>,
+            Ágnes Kis-Benedek,
+            Balázs Szalkai
+            <br>
+      <em>US Patent 10,380,753</em>
+            <br>
+            <a href="https://pimg-fpiw.uspto.gov/fdd/53/807/103/0.pdf">pdf</a>
+            <p></p>
+            <p>
+              We propose a fast and accurate method for generating displacement maps from stereo image pairs using neural networks. This enables 
+              more robust depth prediction compared to standard methods.
+            </p>
+          </td>
+        </tr>
+
+        </tbody>
+      </table>
+
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Talks</heading>
+      <ul>
+          <li> In July 2021 I gave a remote talk at the Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
+      </ul>
+            <p>
+            </p>
+          </td>
+        </tr>
+      </tbody>
+      </table>
+
 
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
