New paper. Fix minor formatting issues.

--- a/index.html
+++ b/index.html
@@ -61,10 +61,37 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 
+
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                  <img src='images/fastweights.svg' width="160">
+                  <img src="images/trafo_gen.svg" width="160">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2108.12284">
+                <papertitle>The Devil is in the Detail: Simple Tricks Improve Systematic Generalization of Transformers</papertitle>
+              </a>
+              <br>
+              <strong>Róbert Csordás</strong>,
+              Kazuki Irie,
+              <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+              <br>
+        <em>Empirical Methods in Natural Language Processing, 2021 </em>
+              <br>
+              <a href="https://arxiv.org/pdf/2108.12284.pdf">pdf</a>
+        /
+              <a href="https://github.com/robertcsordas/transformer_generalization">code</a>
+              <p>
+                We significantly improve the systematic generalization of Transformers on SCAN, CFQ, PCFG, COGS, and  Mathematics dataset, by revisiting model configurations as basic as scaling of embeddings, early stopping, relative positional embedding, and weight sharing. We also show that relative positional embeddings largely mitigates the EOS decision problem. Importantly, differences between these models are typically invisible on the IID data split, which calls for proper generalization validation sets. 
+              </p>
+            </td>
+          </tr> 
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                  <img src="images/fastweights.svg" width="160">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -75,9 +102,9 @@
               Kazuki Irie,
               <a href="https://ischlag.github.io/">Imanol Schlag</a>,
               <strong>Róbert Csordás</strong>,
-              <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>,
+              <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
               <br>
-        <em>arXiv pre-print, 2021  
+        <em>arXiv pre-print, 2021  </em>
               <br>
               <a href="https://arxiv.org/pdf/2106.06295.pdf">pdf</a>
         /
@@ -90,7 +117,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src='images/modular.svg' width="160">
+                <img src="images/modular.svg" width="160">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://openreview.net/pdf?id=7uVcpu-gMD">
@@ -120,7 +147,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-                  <img src='images/dnc.svg' width="160">
+                  <img src="images/dnc.svg" width="160">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/pdf/1904.10278.pdf">
@@ -145,20 +172,18 @@
             </td>
           </tr>
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Patents</heading>
-            </td>
-          </tr>
-        </tbody>
-        </table>
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Patents</heading>
+          </td>
+        </tr>
+      </tbody></table>
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src='images/patent.png' width="160">
+                <img src="images/patent.png" width="160">
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
             <a href="https://pimg-fpiw.uspto.gov/fdd/53/807/103/0.pdf">
@@ -169,7 +194,7 @@
             Ágnes Kis-Benedek,
             Balázs Szalkai
             <br>
-      <em>US Patent 10,380,753</em>
+              <em>US Patent 10,380,753</em>
             <br>
             <a href="https://pimg-fpiw.uspto.gov/fdd/53/807/103/0.pdf">pdf</a>
             <p>
@@ -179,25 +204,21 @@
           </td>
         </tr>
 
-        </tbody>
-      </table>
+      </tbody></table>
 
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
-          <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Talks</heading>
-      <ul>
-          <li> In July 2021 I gave a remote talk at the Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
-      </ul>
-          </td>
-        </tr>
-      </tbody>
-      </table>
+              <td style="padding:20px;width:100%;vertical-align:middle">
+                <heading>Talks</heading>
+                  <ul>
+                      <li> In July 2021 I gave a remote talk at the Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
+                  </ul>
+              </td>
+          </tr>
+        </table>
 
-
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:0px">
               <br>
@@ -206,7 +227,6 @@
               </p>
             </td>
           </tr>
-        </tbody>
         </table>
       
       </table>
