--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
             <a href="https://arxiv.org/pdf/2108.12284.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/transformer_generalization">code</a>
             <p>
-              We significantly improve the systematic generalization of Transformers on SCAN, CFQ, PCFG, COGS, and  Mathematics dataset, by revisiting model configurations as basic as scaling of embeddings, early stopping, relative positional embedding, and weight sharing. We also show that relative positional embeddings largely mitigates the EOS decision problem. Importantly, differences between these models are typically invisible on the IID data split, which calls for proper generalization validation sets. 
+              We improve the systematic generalization of Transformers on SCAN (0 -> 100% with length cutoff=26), CFQ (66 -> 81% on output length split),
+               PCFG (50 -> 85% on productivity split, 72 -> 96% on systematicity split), COGS (35 -> 81%), and Mathematics dataset, by revisiting model configurations as basic
+               as scaling of embeddings, early stopping, relative positional embedding, and weight sharing. We also show that relative positional embeddings largely mitigate the EOS
+                decision problem. Importantly, differences between these models are typically invisible on the IID data split, which calls for proper generalization validation sets. 
             </p>
           </td>
         </tr> 
