--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <name>Róbert Csordás</name>
             </p>
             <p>
-              I am a PhD candidate at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>, where I work on systematic generalization, mainly in context of algorithmic reasoning.
+              I am a PhD candidate at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>, where I work on systematic generalization, mainly in context of algorithmic reasoning.
               This drives my research interest in network architectures (Transformers, DNC, graph networks) with inductive biases like information routing (attention, memory) and learning modular structures.
               My goal is to create a system that can learn generally applicable rules instead of pure pattern matching but with minimal hardcoded structure. I consider the lack of systematic generation to be the main obstacle to a more generally applicable artificial intelligence.
           </p>
@@ -82,7 +82,8 @@
               <em>Empirical Methods in Natural Language Processing, 2021 </em>
             <br>
             <a href="https://arxiv.org/pdf/2108.12284.pdf">pdf</a> /
-            <a href="https://github.com/robertcsordas/transformer_generalization">code</a>
+            <a href="https://github.com/robertcsordas/transformer_generalization">code</a> /
+            <a href="data/devil_in_the_details.bib">bib</a>
             <p>
               We improve the systematic generalization of Transformers on SCAN (0 -> 100% with length cutoff=26), CFQ (66 -> 81% on output length split),
                PCFG (50 -> 85% on productivity split, 72 -> 96% on systematicity split), COGS (35 -> 81%), and Mathematics dataset, by revisiting model configurations as basic
@@ -109,10 +110,11 @@
             <strong>Róbert Csordás</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>arXiv pre-print, 2021  </em>
+              <em>arXiv pre-print, 2021</em>
             <br>
             <a href="https://arxiv.org/pdf/2106.06295.pdf">pdf</a> /
-            <a href="https://github.com/IDSIA/recurrent-fwp">code</a>
+            <a href="https://github.com/IDSIA/recurrent-fwp">code</a> /
+            <a href="data/fwtrafo.bib">bib</a>
             <p>
               Inspired by the effectiveness of Fast Weight Programmers in the context of Linear Transformers, in this work we explore the recurrent Fast Weight Programmers (FWPs), which exhibit advantageous properties of both Transformers and RNNs.
             </p>
@@ -138,7 +140,8 @@
             <a href="https://openreview.net/pdf?id=7uVcpu-gMD">pdf</a> /
             <a href="https://github.com/RobertCsordas/modules">code</a> /
             <a href="https://docs.google.com/presentation/d/1PUMRh1WRmlbWeMmcTWjgPWLAWebwj9IcDYwfcDSY024/edit?usp=sharing">slides</a> /
-            <a href="data/modules_poster.pdf">poster</a>
+            <a href="data/modules_poster.pdf">poster</a> /
+            <a href="data/modules.bib">bib</a>
             <br>
             <p>
               This paper presents a novel method based on learning binary weight masks to identify individual weights and subnets responsible for specific functions. We contribute an extensive study of emerging modularity in NNs that covers several standard architectures and datasets using this powerful tool. We demonstrate how common NNs fail to reuse submodules and offer new insights into systematic generalization on language tasks.
@@ -166,7 +169,8 @@
             <a href="https://arxiv.org/pdf/1904.10278.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/dnc">code</a> /
             <a href="https://docs.google.com/presentation/d/1mn3AwYIzlAL3veoLGV2evKdT5d2e9QCzsORKXYK54i0/edit?usp=sharing">slides</a> /
-            <a href="data/poster_dnc.pdf">poster</a>
+            <a href="data/poster_dnc.pdf">poster</a> /
+            <a href="data/dnc.bib">bib</a>
             <p>
               We propose three improvements for the DNC architecture, which significantly improves its performance on algorithmic reasoning tasks. First, the lack of key-value separation makes the address distribution dependent also on the stored value.  Second, 
               DNC leaves deallocated data in the memory, which results in aliasing. Third, the temporal linkage matrix quickly degrades the sharpness of the address distribution. Our proposed fixes improve the mean error rate on the bAbI question answering dataset by 43%.
