--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             Kazuki Irie,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>Empirical Methods in Natural Language Processing, 2021 </em>
+              <em>Empirical Methods in Natural Language Processing (EMNLP), 2021 </em>
             <br>
             <a href="https://arxiv.org/pdf/2108.12284.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/transformer_generalization">code</a> /
@@ -110,7 +110,7 @@
             <strong>Róbert Csordás</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>arXiv pre-print, 2021</em>
+              <em>Conference on Neural Information Processing Systems (NeurIPS), 2021</em>
             <br>
             <a href="https://arxiv.org/pdf/2106.06295.pdf">pdf</a> /
             <a href="https://github.com/IDSIA/recurrent-fwp">code</a> /
@@ -135,7 +135,7 @@
             <a href="http://www.sjoerdvansteenkiste.com/">Sjoerd van Steenkiste</a>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>International Conference on Learning Representations</em>, 2021  
+              <em>International Conference on Learning Representations (ICLR)</em>, 2021  
             <br>
             <a href="https://openreview.net/pdf?id=7uVcpu-gMD">pdf</a> /
             <a href="https://github.com/RobertCsordas/modules">code</a> /
@@ -162,7 +162,7 @@
             <strong>Róbert Csordás</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>International Conference on Learning Representations</em>, 2019
+              <em>International Conference on Learning Representations (ICLR)</em>, 2019
             <br>
               <em>NeurIPS Workshop on Relational Representation Learning</em>, 2018
             <br>
