Add poster and slides

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             <br>
             <a href="https://arxiv.org/pdf/2108.12284.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/transformer_generalization">code</a> /
+            <a href="https://docs.google.com/presentation/d/1YOMssLAUo7IFqu2-wePWCNiEIb9vsOmPDUDU9toGCjo/edit?usp=sharing">slides</a> /
+            <a href="data/poster_devil_is_in_the_details.pdf">poster</a> /
             <a href="data/devil_in_the_details.bib">bib</a>
             <p>
               We improve the systematic generalization of Transformers on SCAN (0 -> 100% with length cutoff=26), CFQ (66 -> 81% on output length split),
