Add NDR preprint.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,36 @@
         
       <!-- List of publications -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- Neural Data Router -->
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+                <img src="images/ndr.svg" width="160">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://arxiv.org/abs/2110.07732">
+              <papertitle>The Neural Data Router: Adaptive Control Flow in Transformers Improves Systematic Generalization</papertitle>
+            </a>
+            <br>
+            <strong>Róbert Csordás</strong>,
+            Kazuki Irie,
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+            <br>
+              <em>arXiv preprint, 2021 </em>
+            <br>
+            <a href="https://arxiv.org/pdf/2110.07732.pdf">pdf</a> /
+            <a href="https://github.com/robertcsordas/ndr">code</a> /
+            <a href="data/ndr.bib">bib</a>
+            <p>
+              We look at Transformers as a system for routing relevant information to the right node/operation at the right time in the grid represented by its column.
+              To facilitate learning useful control flow, we propose two modifications to the Transformer architecture: copy gate and geometric attention. The resulting
+              Neural Data Router (NDR) architecture achieves length generalization compositional table lookup task, as well as generalization across computational depth
+              on the simple arithmetic task and ListOps.
+            </p>
+          </td>
+        </tr> 
+
         <!-- Devil is in the details -->
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
