--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@
                 <ul>
                     <li> In July 2021 I gave a remote talk at the Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
                 </ul>
+                <ul>
+                    <li> In October 2021 I gave a <a href="https://www.youtube.com/watch?v=_r3135p-ksQ">remote talk</a> at the MIAI Deeptails Seminar organized by INRIA Grenoble Rhône-Alpes on our paper <a href="https://arxiv.org/abs/2108.12284">The Devil is in the Detail: Simple Tricks Improve Systematic Generalization of Transformers</a>.</li>
+              </ul>
             </td>
         </tr>
       </table>
