--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <title>Róbert Csordás</title>
   
-  <meta name="author" content="Róbert Csordás">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Robert Csordas">
+  <meta name="viewport" content="width=device-width, initial-scale=1">    
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="images/IDSIA_logo.png">
