Link to Kazuki's website.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </a>
             <br>
             <strong>Róbert Csordás</strong>,
-            Kazuki Irie,
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
               <em>arXiv preprint, 2021 </em>
@@ -106,7 +106,7 @@
             </a>
             <br>
             <strong>Róbert Csordás</strong>,
-            Kazuki Irie,
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
               <em>Empirical Methods in Natural Language Processing (EMNLP), 2021 </em>
@@ -137,7 +137,7 @@
               <papertitle>Going Beyond Linear Transformers with Recurrent Fast Weight Programmers</papertitle>
             </a>
             <br>
-            Kazuki Irie,
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
             <a href="https://ischlag.github.io/">Imanol Schlag</a>,
             <strong>Róbert Csordás</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
