Add workshop papers

--- a/index.html
+++ b/index.html
@@ -211,6 +211,70 @@
         </tr>
       </tbody></table>
 
+      <!-- Workshop papers title -->
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Workshop papers</heading>
+          </td>
+        </tr>
+      </tbody></table>
+
+      <!-- Workshop papers list -->
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- Improving Baselines in the Wild -->
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/wilds.png" width="160">
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://openreview.net/forum?id=9vxOrkNTs1x">
+              <papertitle>Improving Baselines in the Wild</papertitle>
+            </a>
+            <br>
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
+            <a href="https://ischlag.github.io/">Imanol Schlag</a>,
+            <strong>Róbert Csordás</strong>,
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+            <br>
+              <em>NeurIPS DistShift Workshop</em>, 2021  
+            <br>
+            <a href="https://openreview.net/pdf?id=9vxOrkNTs1x">pdf</a> /
+            <a href="https://github.com/kazuki-irie/fork--wilds-public">code</a>
+            <br>
+            <p>
+              We present our critical observations on the iWildCam and FMoW datasets of the recently released WILDS benchmark. We show that (1) Conducting separate cross-validation for each evaluation metric is crucial for both datasets, (2) A weak correlation between validation and test performance might make model development difficult for iWildCam, (3) Minor changes in the training of hyper-parameters improve the baseline by a relatively large margin, (4) There is a strong correlation between certain domains and certain target labels.
+            </p>
+          </td>
+        </tr> 
+
+        <!-- A Modern Self-Referential Weight Matrix -->
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/srwm.svg" width="160">
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <a href="https://openreview.net/forum?id=lVUGfLpNpCF">
+              <papertitle>A Modern Self-Referential Weight Matrix That Learns to Modify Itself</papertitle>
+            </a>
+            <br>
+            <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
+            <a href="https://ischlag.github.io/">Imanol Schlag</a>,
+            <strong>Róbert Csordás</strong>,
+            <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
+            <br>
+              <em>NeurIPS Deep RL Workshop</em>, 2021  
+            <br>
+            <a href="https://openreview.net/pdf?id=lVUGfLpNpCF">pdf</a> /
+            <a href="https://github.com/IDSIA/modern-srwm">code</a>
+            <br>
+            <p>
+              The weight matrix (WM) of a neural network (NN) is its program which remains fixed after training. The WM or program of a self-referential NN, however, can keep rapidly modifying all of itself during runtime. In principle, such NNs are capable of recursive self-improvement. Here we propose a scalable self-referential WM (SRWM) that uses self-generated training patterns, outer products and the delta update rule to modify itself.
+            </p>
+          </td>
+        </tr> 
+      </tbody></table>
+
       <!-- Patents title -->
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
@@ -255,7 +319,7 @@
                     <li> In July 2021 I gave a remote talk at the Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
                 </ul>
                 <ul>
-                    <li> In October 2021 I gave a <a href="https://www.youtube.com/watch?v=_r3135p-ksQ">remote talk</a> at the MIAI Deeptails Seminar organized by INRIA Grenoble Rhône-Alpes on our paper <a href="https://arxiv.org/abs/2108.12284">The Devil is in the Detail: Simple Tricks Improve Systematic Generalization of Transformers</a>.</li>
+                    <li> In October 2021 I gave a <a href="https://www.youtube.com/watch?v=_r3135p-ksQ">remote talk</a> together with <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a> at the MIAI Deeptails Seminar organized by INRIA Grenoble Rhône-Alpes on our paper <a href="https://arxiv.org/abs/2108.12284">The Devil is in the Detail: Simple Tricks Improve Systematic Generalization of Transformers</a>.</li>
               </ul>
             </td>
         </tr>
