--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>arXiv preprint, 2021 </em>
+              <em>International Conference on Learning Representations (ICLR), 2022</em> 
             <br>
             <a href="https://arxiv.org/pdf/2110.07732.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/ndr">code</a> /
@@ -167,7 +167,7 @@
             <a href="http://www.sjoerdvansteenkiste.com/">Sjoerd van Steenkiste</a>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>International Conference on Learning Representations (ICLR)</em>, 2021  
+              <em>International Conference on Learning Representations (ICLR), 2021</em>
             <br>
             <a href="https://openreview.net/pdf?id=7uVcpu-gMD">pdf</a> /
             <a href="https://github.com/RobertCsordas/modules">code</a> /
@@ -194,9 +194,9 @@
             <strong>Róbert Csordás</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>International Conference on Learning Representations (ICLR)</em>, 2019
+              <em>International Conference on Learning Representations (ICLR), 2019</em>
             <br>
-              <em>NeurIPS Workshop on Relational Representation Learning</em>, 2018
+              <em>NeurIPS Workshop on Relational Representation Learning, 2018</em>
             <br>
             <a href="https://arxiv.org/pdf/1904.10278.pdf">pdf</a> /
             <a href="https://github.com/robertcsordas/dnc">code</a> /
@@ -237,7 +237,7 @@
             <strong>Róbert Csordás</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>NeurIPS DistShift Workshop</em>, 2021  
+              <em>NeurIPS DistShift Workshop, 2021</em>  
             <br>
             <a href="https://openreview.net/pdf?id=9vxOrkNTs1x">pdf</a> /
             <a href="https://github.com/kazuki-irie/fork--wilds-public">code</a>
@@ -263,7 +263,7 @@
             <strong>Róbert Csordás</strong>,
             <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>
             <br>
-              <em>NeurIPS Deep RL Workshop</em>, 2021  
+              <em>NeurIPS Deep RL Workshop, 2021</em>
             <br>
             <a href="https://openreview.net/pdf?id=lVUGfLpNpCF">pdf</a> /
             <a href="https://github.com/IDSIA/modern-srwm">code</a>
