--- a/index.html
+++ b/index.html
@@ -346,11 +346,14 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Talks</heading>
                 <ul>
-                    <li> In July 2021 I gave a remote talk at the Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
+                  <li> In March 2022 I gave a <a href="https://docs.google.com/presentation/d/1PZ3t1DpAqJXpcJ2aXNATP39hroM4fQ0A2Acbf8-zUiA/edit?usp=sharing">talk</a> on the <a href="https://cemse.kaust.edu.sa/ai/aii-symp-2022">Rising Stars in AI Symposium</a> at KAUST on how ideas from compositionality improve systematic generalization.</li>
                 </ul>
                 <ul>
-                    <li> In October 2021 I gave a <a href="https://www.youtube.com/watch?v=_r3135p-ksQ">remote talk</a> together with <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a> at the MIAI Deeptails Seminar organized by INRIA Grenoble Rhône-Alpes on our paper <a href="https://arxiv.org/abs/2108.12284">The Devil is in the Detail: Simple Tricks Improve Systematic Generalization of Transformers</a>.</li>
-              </ul>
+                  <li> In October 2021 I gave a <a href="https://www.youtube.com/watch?v=_r3135p-ksQ">remote talk</a> together with <a href="http://people.idsia.ch/~kazuki/">Kazuki Irie</a> at the MIAI Deeptails Seminar organized by INRIA Grenoble Rhône-Alpes on our paper <a href="https://arxiv.org/abs/2108.12284">The Devil is in the Detail: Simple Tricks Improve Systematic Generalization of Transformers</a>.</li>
+                </ul>
+                <ul>
+                    <li> In July 2021 I gave a remote talk at the Center for Machine Learning and Neuroscience at the Baylor college of Medicine in Houston on the paper <a href="https://openreview.net/pdf?id=7uVcpu-gMD">Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks</a>.</li>
+                </ul>
             </td>
         </tr>
       </table>
