--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
               <name>Róbert Csordás</name>
             </p>
             <p>
-              I am a PhD candidate at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>, where I work on systematic generalization, mainly in context of algorithmic reasoning.
-              This drives my research interest in network architectures (Transformers, DNC, graph networks) with inductive biases like information routing (attention, memory) and learning modular structures.
-              My goal is to create a system that can learn generally applicable rules instead of pure pattern matching but with minimal hardcoded structure. I consider the lack of systematic generation to be the main obstacle to a more generally applicable artificial intelligence.
+              I am a PhD candidate at the <a href="http://www.idsia.ch/">Swiss AI lab IDSIA</a>, working with
+              Prof. <a href="http://people.idsia.ch/~juergen/">Jürgen Schmidhuber</a>. I work on systematic 
+              generalization, mainly in the context of algorithmic reasoning. This drives my research interest 
+              in network architectures (Transformers, DNC, graph networks) with inductive biases like information 
+              routing (attention, memory) and learning modular structures. My goal is to create a system that
+              can learn generally applicable rules instead of pure pattern matching but with minimal hardcoded
+              structure. I consider the lack of systematic generation the main obstacle to a more generally
+              applicable artificial intelligence.
           </p>
             <p>
-              Prior to starting my PhD I received a master's degree from <a href="https://www.bme.hu/">Budapest University of Technology and Economics</a>, and worked as a research scientist at <a href="https://aimotive.com/">AImotive</a> on developing self driving cars.
+              Prior to starting my PhD I received a master's degree from <a href="https://www.bme.hu/">Budapest University of Technology and Economics</a> and worked as a research scientist at <a href="https://aimotive.com/">AImotive</a> on developing self driving cars.
             </p>
             <p style="text-align:center">
               <a href="mailto:robert@idsia.ch">Email</a> &nbsp/&nbsp
