--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
               in network architectures (Transformers, DNC, graph networks) with inductive biases like information 
               routing (attention, memory) and learning modular structures. My goal is to create a system that
               can learn generally applicable rules instead of pure pattern matching but with minimal hardcoded
-              structure. I consider the lack of systematic generation the main obstacle to a more generally
+              structure. I consider the lack of systematic generation to be the main obstacle to a more generally
               applicable artificial intelligence.
           </p>
             <p>
-              Prior to starting my PhD I received a master's degree from <a href="https://www.bme.hu/">Budapest University of Technology and Economics</a> and worked as a research scientist at <a href="https://aimotive.com/">AImotive</a> on developing self driving cars.
+              Before starting my PhD,  I received a master's degree from <a href="https://www.bme.hu/">Budapest University of Technology and Economics</a> and worked as a research scientist at <a href="https://aimotive.com/">AImotive</a> on developing self driving cars.
             </p>
             <p style="text-align:center">
               <a href="mailto:robert@idsia.ch">Email</a> &nbsp/&nbsp
