--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               applicable artificial intelligence.
           </p>
             <p>
-              Before starting my PhD,  I received a master's degree from <a href="https://www.bme.hu/">Budapest University of Technology and Economics</a> and worked as a research scientist at <a href="https://aimotive.com/">AImotive</a> on developing self driving cars.
+              Before starting my PhD, I received a master's degree from <a href="https://www.bme.hu/">Budapest University of Technology and Economics</a> and worked as a research scientist at <a href="https://aimotive.com/">AImotive</a> on developing self driving cars.
             </p>
             <p style="text-align:center">
               <a href="mailto:robert@idsia.ch">Email</a> &nbsp/&nbsp
@@ -350,6 +350,9 @@
         <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Talks</heading>
+                <ul>
+                  <li> In April 2022 I gave a <a href="https://docs.google.com/presentation/d/1Y5vP0ONiQX_xtOrLo4f1rZpm_ysAVKhpupcYv_CwrpA/edit?usp=sharing">talk</a> for <a href="https://www.mit.edu/~jda/">Jacob Andreas</a>' <a href="https://lingo.csail.mit.edu/people.html">group</a> on how ideas from compositionality improve systematic generalization.</li>
+                </ul>
                 <ul>
                   <li> In March 2022 I gave a <a href="https://webcast.kaust.edu.sa/Mediasite/Showcase/default/Presentation/7f00f80ef622453286444c471f360bbd1d">talk</a> on the <a href="https://cemse.kaust.edu.sa/ai/aii-symp-2022">Rising Stars in AI Symposium</a> at KAUST on how ideas from compositionality improve systematic generalization.</li>
                 </ul>
